external-crates/move/crates/move-compiler/tests/move_check/naming/partially_invalid_binding_with_usage.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04007]: incompatible types
  ┌─ tests/move_check/naming/partially_invalid_binding_with_usage.move:3:13
  │
3 │         let (b, R{f}): (); b;
  │             ^^^^^^^^^  -- Given: '()'
  │             │           
  │             Invalid value for binding
  │             Expected: '(_, _)'

error[E03004]: unbound type
  ┌─ tests/move_check/naming/partially_invalid_binding_with_usage.move:3:17
  │
3 │         let (b, R{f}): (); b;
  │                 ^ Unbound type 'R' in current scope
